2025/toy-project/simple-k3s-deploy/kubernetes/order-deployment-1.0.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment-1-0-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: 1.0.0
    spec:
      containers:
      - name: order-container
        image: order-app:1.0.0
        ports:
        - containerPort: 8080      # 컨테이너에서 사용하는 포트
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 8080                   # 외부에 노출되는 포트
      targetPort: 8080           # 컨테이너에서 사용하는 포트
  type: ClusterIP
