2025/toy-project/simple-k3s-deploy/kubernetes/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: myminipc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
